fix: use z-index correctly

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -11,11 +11,11 @@
 }
 
 .impostor-title {
+	user-select: none;
 	font-family: var(--font-impostor);
 	font-size: 3.5rem;
 	color: var(--color-light-gray);
 	opacity: 90%;
 	text-transform: uppercase;
 	line-height: 1.2;
-	z-index: -2;
 }
